--- a/views/game/task.ejs
+++ b/views/game/task.ejs
@@ -26,7 +26,7 @@
     <% for(var i = 0; i < nbList; i++){ %>
         <div class="switch-container">
             <label class="switch">
-                <input type="checkbox" name="toggle" value=<%=list[i]%>/>
+                <input type="checkbox" name="toggle" value="<%=list[i]%>"/>
                 <span></span>
             </label>
             <span><%=list[i]%></span>
