--- a/views/game/display.ejs
+++ b/views/game/display.ejs
@@ -117,7 +117,8 @@
 
         <% if(game.TableInGame[mainPlayer].status == 'dead'){ %>
 
-            <h3 class="ui dividing header"> Vous avez été tué </h3>
+            <h3 class="ui dividing header"> Vous avez été tué
+                 </h3>
         
         <% } else { %>
             <h3 class="ui dividing header"> Votre Mission </h3> 
