--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -10,6 +10,6 @@
         <a href= "/game/create" class="item"> <img src="/assets/picture/new.png"/> </a>
         <a href= "/game/load" class="item"> <img src="/assets/picture/knife.png"/> </a>
         <a href= "/game/historique" class="item"> <img src="/assets/picture/historique.png"/> </a>
-        <a href= "/auth/disconnect" class="item"> <img src="/assets/picture/disconnect.png"/> </a>
+        <a href= "/profil" class="item"> <img src="/assets/picture/profil.png"/> </a>
     </div>
 </div>
