--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -10,27 +10,65 @@
 
 
 <div class="content">
-    <div class="header"><%= infoPlayer[0] %></div>
-    <div class="meta">
-        <a><%= infoPlayer[1] %></a>
-    </div>
+    <h3 class="ui dividing header">  Info Player : <a><%= infoPlayer[2] %> parties </a> <br> 
+    </h3>
+
     <div class="description">
-        Nombre de Game :  <%= infoPlayer[2] %>
-        Survivant :  <%= infoPlayer[3] %> <br> 
-        Top Killer :  <%= infoPlayer[4] %> <br> 
-        Killer Alpha :  <%= infoPlayer[5] %> <br> 
-        Killer Suprême :  <%= infoPlayer[6] %> <br>  
+
+        <div class="ui two column grid">
+            
+            <div class="column">
+                <div class="image-container">
+                    <img src="/assets/picture/survivant.png" >
+                </div>
+                Survivant :  <%= infoPlayer[3] %> <br>
+            </div>
+
+            <div class="column">
+                <div class="image-container">
+                    <img src="/assets/picture/topKiller.png" >
+                </div>
+                Top Killer :  <%= infoPlayer[4] %> <br> 
+            </div>
+            
+        </div>
+
+        <div class="ui two column grid">
+            
+            <div class="column">
+                <div class="image-container">
+                    <img src="/assets/picture/alphaKiller.png" >
+                </div>
+                Killer Alpha : <%= infoPlayer[5] %> <br> 
+            </div>
+
+            <div class="column">
+                <div class="image-container">
+                    <img src="/assets/picture/supremeKiller.png" >
+                </div>
+                Killer Suprême :  <%= infoPlayer[6] %> <br> 
+            </div>
+            
+        </div>
+
         <br>
-        Nombre de kill :  <%= infoPlayer[7] %> <br> 
-        Nombre succes :  <%= infoPlayer[8] %> <br> 
+        <br>
+        Nombre de kill :  <%= infoPlayer[7] %>  
     </div>
+
+    <h3 class="ui dividing header">  Title :  <%= infoPlayer[1] %> || <a>0 / 10 </a></h3>
+
+
+    <h3 class="ui dividing header">  Success :  <a><%= infoPlayer[8] %> / 20 </a></h3>
+
 </div>
+
 
 
 
 <form action="/profil" method="post" class="ui form">
     <div style="display: flex; justify-content: center; align-items: center;">
-        <button type="submit" class="ui dark red labeled submit icon button">
+        <button type="submit" class="ui dark red labeled submit icon button" style="position:fixed ; bottom: 10%">
             <i class="close  icon"></i>
             Déconnection
         </button>
