correction envoie form pour kill

--- a/views/game/display.ejs
+++ b/views/game/display.ejs
@@ -151,7 +151,7 @@
     </div>
 </div>
 
-            <form id="confirmationForm" class="ui form">
+            <form id="killForm" class="ui form">
                 <div style="display: flex; justify-content: center; align-items: center;">
                     <button type="button" class="ui dark red labeled submit icon button">
                         <i class="bullseye icon"></i>
@@ -252,7 +252,7 @@
         // -----------------
 
         // Ouvrir la modale de confirmation
-        $('#confirmationForm').on('click', function() {
+        $('#killForm').on('click', function() {
             $('#confirmationModal').modal('show');
         });
 
