--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,10 @@
 
 <%- include('./header.ejs') %>
 
-<h1>  Killer's Legacy - Règles du Jeu </h1>
+<h1> 
+    The Killer Legacy
+    <p> - Règles du Jeu </p>
+</h1>
 
 <%- include ('./flash.ejs') %>
 
