check les succès d'un user

--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -59,7 +59,7 @@
     <h3 class="ui dividing header">  Title :  <%= infoPlayer[1] %> || <a>0 / 10 </a></h3>
 
 
-    <h3 class="ui dividing header">  Success :  <a><%= infoPlayer[8] %> / 10 </a></h3>
+    <h3 class="ui dividing header">  Success :  <a><%= infoPlayer[8].length %> / 10 </a></h3>
 
         <% for (var i = 0; i < success.length; i++ ) { %>
             <div class="column">
