--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -56,7 +56,7 @@
         Nombre de kill :  <%= infoPlayer[7] %>  
     </div>
 
-    <h3 class="ui dividing header">  Title :  <%= infoPlayer[1] %> || <a>0 / 10 </a></h3>
+    <!--  <h3 class="ui dividing header">  Title :  <%= infoPlayer[1] %> || <a>0 / 10 </a></h3>  -->
 
 
     <h3 class="ui dividing header">  Success :  <a><%= infoPlayer[8].length %> / 10 </a></h3>
