--- a/views/friend.ejs
+++ b/views/friend.ejs
@@ -62,7 +62,7 @@ Your friends :
                         Killer Suprême :  <%= listOfFriend[i][6] %> <br>  
                         <br>
                         Nombre de kill :  <%= listOfFriend[i][7] %> <br> 
-                        Nombre succes :  <%= listOfFriend[i][8] %> <br> 
+                        Nombre succes :  <%= listOfFriend[i][8].length %> / 10<br> 
                     </div>
                 </div>
 
