--- a/public/page.css
+++ b/public/page.css
@@ -1,26 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
   body{
-    background-color: #ffffff;
+    font-family: 'Orbitron', sans-serif;
+    background-color: #1e1e1e;
+    color: #000000;
+    margin: 0;
+    padding: 0;
+    text-align: center;
   }
 
-  .invisible-zone {
-    position: bottom;
-    bottom: 0;
-    left: 0;
-    width: 100%; /* Prendre toute la largeur de la page */
-    height: 76px;
+  h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    margin-top: 20px;
+    color: #e63946;
   }
 
-  .bottom-zone {
-    position: fixed;
-    bottom: 0%;
-    margin: -4%;
-    width: 100%;
-    height: 76px;
-    background-color: #ffffff;
-    display: flex;
-    justify-content: center;
+  h1 p {
+    font-size: 1.5rem;
+    color: #f4a261;
+    text-align: center;
+  }
+
+  .container {
+    width: 95%;
+    margin: auto;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(230, 57, 70, 1);
+    margin-top: 10px;
+  }
+
+  h2 {
+    color: #f4a261;
+    text-transform: uppercase;
+    border-bottom: 2px solid #f4a261;
+    padding-bottom: 5px;
+    margin-top: 20px;
+  }
+
+  h2, p {
+    font-size: 1.5rem;
+    color: #ffffff;
+  }
+  
+  h6{
+    font-size: 0.8rem;
+    margin-top: 0px;
+    color: #000000;
+  }
+  p, li {
+    font-size: 1.2rem;
+    line-height: 1.6;
+    color: #ffffff;
+    text-align: left;
+  }
+
+  strong {
+    color: #e63946;
   }
 
   .underline {
-    text-decoration: underline;
+    text-decoration: solid;
+    color: #f4a261;
+  }
+
+  ol, ul {
+    text-align: left;
+    display: inline-block;
+    margin: 0 auto;
   }
