--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
 <h1> 
     The Killer Legacy
-    <p> - Règles du Jeu </p>
+    <p> Règles du Jeu </p>
 </h1>
 
 <%- include ('./flash.ejs') %>
@@ -20,67 +20,56 @@
     </p>
 
     <h2>Comment jouer</h2>
-    <ol>
-        <li>
-            <strong>Distribution des cibles :</strong>
-            <p>
-                Chaque joueur reçoit, de manière aléatoire et secrète, le nom d'un autre joueur à éliminer.
-            </p>
-        </li>
-        <li>
-            <strong>Éliminations :</strong>
-            <p>
-                Les joueurs doivent "tuer" leur cible en utilisant des gestes, des messages ou des interactions. 
-                Lorsqu'un joueur élimine sa cible, il reçoit immédiatement une nouvelle cible à éliminer.
-            </p>
-        </li>
-        <li>
-            <strong>Stratégie :</strong>
-            <p>
-                Utilisez la discrétion et la stratégie pour éviter d'être repéré par les autres joueurs tout en tentant d'éliminer votre cible.
-            </p>
-        </li>
-        <li>
-            <strong>Victoire :</strong>
-            <p>
-                3 types de victoires :
-            </p>
+    <li>
+        <strong>Distribution des cibles :</strong>
+        <p>
+            Chaque joueur reçoit, de manière aléatoire et secrète, le nom d'un autre joueur ainsi qu'une action à lui faire executer afin de l'éliminer.
+        </p>
+    </li>
+    <p></p>
+    <li>
+        <strong>Éliminations :</strong>
+        <p>
+            Les joueurs doivent "tuer" leur cible en utilisant des gestes, des messages ou des interactions. 
+            Lorsqu'un joueur élimine sa cible, il reçoit immédiatement une nouvelle cible à éliminer.
+        </p>
+    </li>
+    <p></p>
+    <li>
+        <strong>Stratégie :</strong>
+        <p>
+            Utilisez la discrétion et la stratégie pour éviter d'être repéré par les autres joueurs tout en tentant d'éliminer votre cible.
+        </p>
+    </li>
+    <p></p>
+    <li>
+        <strong>Victoire :</strong>
+        <p>
+            3 types de victoires :
+        </p>
+        <ol>
+            Vous êtes encore en vie, félicitation vous êtes un <strong>Survivant</strong>
+        </ol>
+        <p></p>
+        <ol>
+            Vous avez le plus grand nombre de kill, alors vous êtes le <strong>Top Killer</strong>
+        </ol>
+        <p></p>
+        <ol>
+            Vous êtes encore en vie et vous avez le plus grand nombre de kill <span class="underline">des joueur encore en vie</span>, vous êtes désormais le <strong>Killer Alpha</strong>
+        </ol>
+        <p></p>
+        <ol>
+            Si vous êtes encore en vie et que vous avez le plus grand nombre de kill <span class="underline">de la partie</span>, vous mériter le titre prestigieux du <strong>Killer Suprême</strong>
+        </ol>
 
-            <ol>
-                Vous êtes encore en vie, félicitation vous êtes un <strong>Survivant</strong>
-            </ol>
-
-            <p></p>
-
-            <ol>
-                Vous avez le plus grand nombre de kill, alors vous êtes le <strong>Top Killer</strong>
-            </ol>
-
-            <p></p>
-
-            <ol>
-                Vous êtes encore en vie et vous avez le plus grand nombre de kill <span class="underline">des joueur encore en vie</span>, vous êtes désormais le <strong>Killer Alpha</strong>
-            </ol>
+    </li>
     
-            <p></p>
-
-            <p>
-                Si vous êtes encore en vie et que vous avez le plus grand nombre de kill <span class="underline">de la partie</span>, vous mériter le titre prestigieux du <strong>Killer Suprême</strong>
-            </p>
-
-        </li>
-    </ol>
 
     <h2>Caractéristiques</h2>
-    <ul>
-        <li><strong>Jouabilité en temps réel :</strong> Les éliminations et interactions se font instantanément.</li>
-        <li><strong>Jeux IRL :</strong> Communiquez avec les autres joueurs pour comploter ou bluffer.</li>
-    </ul>
+    
+    <li><strong>Jeux IRL</strong> : Communiquez avec les autres joueurs pour comploter ou bluffer.</li>
 
-    <h2>Consignes de Sécurité</h2>
-    <p>
-        Respectez les autres joueurs et jouez dans un esprit de camaraderie.
-    </p>
 </div>
 
 
