--- a/public/card.css
+++ b/public/card.css
@@ -15,19 +15,45 @@
     flex-wrap: wrap; /* Permet aux cartes de passer à la ligne si nécessaire */
     justify-content: center;
     margin : 0;
+    color : white;
 }
 
 .card {
     width: 100%; /* Deux cartes par ligne avec un espace */
     margin: 15px; /* Marge autour de chaque carte */
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Ombre pour les cartes */
+    box-shadow: 0 2px 8px rgba(29, 149, 20, 0.1); /* Ombre pour les cartes */
     border-radius: 5px; /* Coins arrondis */
     overflow: hidden; /* Évite le débordement de contenu */
 }
 
+h2, div{
+    font-size: 1rem;
+    color: #ffffff;
+}
+
+h3 {
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+h4 {
+    margin-top: 0px;
+    font-size: 0.9rem;
+    color: #c5c4c4;
+}
+
+h5{
+    font-size: 1rem;
+    color: #ffffff;
+    margin-top: 0px;
+
+}
+
 .ui.card.reveal{
     width : 100%;
-    height: 200px;
+    height: 175px;
+    background-color: #e63946;
+    box-shadow: 0 0 15px rgba(255, 0, 0, 0.3);
 }
 
 .ui.small.fade.reveal.image{
@@ -35,4 +61,5 @@
     height: auto;
     object-fit: cover; 
     z-index: 0;
+    background-color: #ffffff58;
 }
