--- a/public/menu.css
+++ b/public/menu.css
@@ -1,10 +1,12 @@
       
     .bottom-menu {
         position: fixed;
-        bottom: 2%;
-        margin: -3%;
-        width: 100%;
-        background-color: #ffffff;
+        bottom: 0%;
+        margin: 0%;
+        left: 6%;
+        width: 90%;
+        height: 70px;
+        background-color: #ffffff00;
         display: flex;
         justify-content: center;
     }
@@ -12,5 +14,24 @@
     .ui.menu {
         display: flex; /* Utilise flexbox pour l'alignement */
         justify-content: space-around; /* Répartit les éléments uniformément */
+        background-color: rgb(197, 197, 197);
     }
-        
+
+    .invisible-zone {
+        position: bottom;
+        bottom: 0;
+        left: 50%;
+        width: 100%; /* Prendre toute la largeur de la page */
+        height: 76px;
+      }
+    
+      .bottom-zone {
+        position: fixed;
+        bottom: 0%;
+        margin: 0%;
+        width: 100%;
+        height: 76px;
+        background-color: #ffffff00;
+        display: flex;
+        justify-content: center;
+      }
