--- a/views/game/display.ejs
+++ b/views/game/display.ejs
@@ -134,7 +134,7 @@
             <div class="ui card reveal">
                 <div class="content">
                     <div class="ui small fade reveal image">
-                        <img class="visible content" src="/assets/picture/couteau.jpg" alt="Couteau">
+                        <img class="visible content" src="/assets/picture/couteau.png" alt="Couteau">
                     </div>
                     
                     <div class="header">
@@ -153,7 +153,7 @@
 
             <form id="killForm" class="ui form">
                 <div style="display: flex; justify-content: center; align-items: center;">
-                    <button type="button" class="ui dark red labeled submit icon button">
+                    <button type="button" class="ui dark red labeled submit icon button" style="background-color : #e63946">
                         <i class="bullseye icon"></i>
                         J'ai tué ma cible
                     </button>
