--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,11 +11,9 @@
 
 <form action="/auth/login" method="post" class="form">
 
-  <div class="ui placeholder segment">
-  
     <div class="ui form">
       <div class="field">
-        <label>Username</label>
+        <h5>Username</h5>
         <div class="ui left icon input">
           <i class="user icon"></i>
           <input type="text" 
@@ -25,7 +23,7 @@
       </div>
 
       <div class="field">
-        <label>Password</label>
+        <h5>Password</h5>
         <div class="ui left icon input">
           <i class="lock icon"></i>
           <input type="password" 
@@ -34,11 +32,12 @@
         </div>
       </div>
       
-      <button type="submit" class="ui blue submit button">Login</button>
+      <br>
+      <button type="submit" class="ui green submit button" style="width:70%"> Login</button>
           
-      <div class="ui horizontal divider">
+      <h2>
         Or
-      </div>
+      </h2>
 
       <div class="middle aligned column">
         <div class="ui big button">
@@ -48,7 +47,6 @@
       </div>
 
     </div>
-  </div>
 
 </form>
 
