--- a/public/page.css
+++ b/public/page.css
@@ -9,6 +9,16 @@
     text-align: center;
   }
 
+  .container {
+    width: 95%;
+    margin: auto;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(230, 57, 70, 1);
+    margin-top: 10px;
+  }
+
   h1 {
     font-size: 3rem;
     text-transform: uppercase;
@@ -21,17 +31,7 @@
     color: #f4a261;
     text-align: center;
   }
-
-  .container {
-    width: 95%;
-    margin: auto;
-    padding: 20px;
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
-    box-shadow: 0 0 5px rgba(230, 57, 70, 1);
-    margin-top: 10px;
-  }
-
+  
   h2 {
     color: #f4a261;
     text-transform: uppercase;
@@ -45,11 +45,34 @@
     color: #ffffff;
   }
   
+  h2, div{
+    font-size: 1rem;
+    color: #ffffff;
+  }
+
+  h3 {
+      color: #ffffff;
+      text-transform: uppercase;
+  }
+
+  h4 {
+      margin-top: 0px;
+      font-size: 0.9rem;
+      color: #c5c4c4;
+  }
+
+  h5{
+      font-size: 1rem;
+      color: #ffffff;
+      margin-top: 0px;
+  }
+
   h6{
     font-size: 0.8rem;
     margin-top: 0px;
     color: #000000;
   }
+
   p, li {
     font-size: 1.2rem;
     line-height: 1.6;
